==> Forever819/LM25118/MRS-CH32V006/User/BSP/Src/OLED.c <==
#include "debug.h"
#include "flash_param.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#define SCL_Port GPIOC
#define SCL_Pin GPIO_Pin_2
#define SDA_Port GPIOC
#define SDA_Pin GPIO_Pin_1
#define Use_HardwareIIC  // 若软件模拟iic请注释

void OLED_W_SCL (uint8_t BitValue) {
    if (BitValue)
        GPIO_SetBits (SCL_Port, SCL_Pin);
    else
        GPIO_ResetBits (SCL_Port, SCL_Pin);
    // Delay_Us (1);
}

void OLED_W_SDA (uint8_t BitValue) {
    if (BitValue)
        GPIO_SetBits (SDA_Port, SDA_Pin);
    else
        GPIO_ResetBits (SDA_Port, SDA_Pin);
    // Delay_Us (1);
}

void OLED_Init (void) {


    OLED_IO_Init();  // 先调用底层的端口初始化
    /*写入一系列的命令，对OLED进行初始化配置*/
    OLED_WriteCommand (0xAE);  // 设置显示开启/关闭，0xAE关闭，0xAF开启

    OLED_WriteCommand (0xD5);  // 设置显示时钟分频比/振荡器频率
    OLED_WriteCommand (0xB0);  // 0x00~0xFF	  //1010 0000
    // A[3:0] : Define the divide ratio D
    // A[7:4] : Set the Oscillator Frequency

    OLED_WriteCommand (0xA8);  // 设置多路复用率
    OLED_WriteCommand (0x3F);  // 0x0E~0x3F //64mux

    OLED_WriteCommand (0xD3);  // 设置显示偏移
    OLED_WriteCommand (0x00);  // 0x00~0x7F


    // 使用内部RAM自增地址模式 可能会导致上次传输未完成  OLED 内部列/页地址未清零
    // 所以需要设置页和列地址
    OLED_WriteCommand (0x21);  // 设置列起始和结束地址
    OLED_WriteCommand (0);     // 起始列
    OLED_WriteCommand (127);   // 结束列

    OLED_WriteCommand (0x22);  // 设置页起始和结束地址
    OLED_WriteCommand (0);     // 起始页
    OLED_WriteCommand (7);     // 结束页

    OLED_WriteCommand (0x20);  // 水平地址模式
    OLED_WriteCommand (0x00);

    OLED_WriteCommand (0x40);  // 设置显示开始行，0x40~0x7F

    // if (!flash_data.cfg.oled_direction) {
    //     OLED_WriteCommand (0xA0);  // 设置左右方向，0xA1正常，0xA0左右反置
    //     OLED_WriteCommand (0xC0);  // 设置上下方向，0xC8正常，0xC0上下反置
    // } else {
    //     OLED_WriteCommand (0xA1);  // 设置左右方向，0xA1正常，0xA0左右反置
    //     OLED_WriteCommand (0xC8);  // 设置上下方向，0xC8正常，0xC0上下反置
    // }
    OLED_Flip (flash_data.cfg.oled_direction);

    OLED_WriteCommand (0xDA);  // 设置COM引脚硬件配置
    OLED_WriteCommand (0x12);

    OLED_WriteCommand (0x81);  // 设置对比度
    OLED_WriteCommand (0xFF);  // 0x00~0xFF

    OLED_WriteCommand (0xD9);  // 设置预充电周期
    OLED_WriteCommand (0xF1);

    OLED_WriteCommand (0xDB);  // 设置VCOMH取消选择级别
    OLED_WriteCommand (0x30);

    OLED_WriteCommand (0xA4);  // 设置整个显示打开/关闭

    OLED_WriteCommand (0xA6);  // 设置正常/反色显示，0xA6正常，0xA7反色

    OLED_WriteCommand (0x8D);  // 设置充电泵
    OLED_WriteCommand (0x14);

    OLED_WriteCommand (0xAF);  // 开启显示

    OLED_Clear();

    OLED_Update();
}
