==> E-Minecraft-2/jog_first_test/Hardware/OLED.c <==
#include "stm32f10x.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#define OLED_SCL       GPIO_Pin_6    //PB6
#define OLED_SDA       GPIO_Pin_7    //PB7

void OLED_W_SCL(uint8_t BitValue)
{
	GPIO_WriteBit(GPIOB, OLED_SCL, (BitAction)BitValue);
}

void OLED_W_SDA(uint8_t BitValue)
{
	GPIO_WriteBit(GPIOB, OLED_SDA, (BitAction)BitValue);
}

void OLED_Init(void)
{	
	OLED_I2C_Init();            //端口初始化
	
	OLED_WriteCommand(0xAE);	//设置显示开启/关闭，0xAE关闭，0xAF开启
	
	OLED_WriteCommand(0xD5);    //设置显示时钟分频比/振荡器频率
	OLED_WriteCommand(0x80);    //0x00 ~ 0xFF
	
	OLED_WriteCommand(0xA8);    //设置多路复用率
	OLED_WriteCommand(0x3F);    //0x0E ~ 0x3F
	
	OLED_WriteCommand(0xD3);    //设置显示偏移 
	OLED_WriteCommand(0x00);    //0x00 ~ 0x7F
	
	OLED_WriteCommand(0x40);    //设置显示开始行，0x40 ~ 0x7F
	
	OLED_WriteCommand(0xA1);    //设置左右方向，0xA1正常，0xA0左右反置
	
	OLED_WriteCommand(0xC8);    //设置上下方向，0xC8正常，0xC0上下反置

	OLED_WriteCommand(0xDA);    //设置COM引脚硬件配置
	OLED_WriteCommand(0x12);
	
	OLED_WriteCommand(0x81);    //设置对比度控制
	OLED_WriteCommand(0xCF);    //0x00 ~ 0xFF

	OLED_WriteCommand(0xD9);    //设置预充电周期 
	OLED_WriteCommand(0xF1);

	OLED_WriteCommand(0xDB);    //设置VCOMH取消选择级别 
	OLED_WriteCommand(0x30);

	OLED_WriteCommand(0xA4);    //设置整个显示打开/关闭 

	OLED_WriteCommand(0xA6);    //设置正常/反色显示，0xA6正常，0xA7反色

	OLED_WriteCommand(0x8D);    //设置充电泵
	OLED_WriteCommand(0x14);

	OLED_WriteCommand(0xAF);    //开启显示
		
	OLED_Clear();               //清空显存数组
	OLED_Update();              //更新显示，清屏，防止初始化后未显示内容时花屏
}
